--- a/src/components/BottomRow.css
+++ b/src/components/BottomRow.css
@@ -3,6 +3,7 @@
     padding-top: 45px;
     padding-left: 25px;
     padding-right: 25px;
+    padding-bottom: 45px;
 }
 
 .botTitle {
